[package]
name = "wikipedia"
version = "0.3.3"
authors = ["Sebastian Waisbrot <seppo0010@gmail.com>"]
license-file = "LICENSE"

description = "Access wikipedia articles from Rust"
readme = "README.md"
documentation = "https://seppo0010.github.io/wikipedia-rs/"

repository = "https://github.com/seppo0010/wikipedia-rs/"
keywords = ["wikipedia", "api"]

[features]
default = ["http-client"]
http-client = ["reqwest", "url"]

[dependencies]
serde_json = "1.0.35"
reqwest = { version = "0.9.8", optional = true }
url = { version = "1.7.2", optional = true }
failure = "0.1.5"
