[package]
name = "wikipedia"
version = "0.4.0"
authors = ["Sebastian Waisbrot <seppo0010@gmail.com>"]
license-file = "LICENSE"
description = "Access wikipedia articles from Rust"
readme = "README.md"
edition = "2021"
documentation = "https://seppo0010.github.io/wikipedia-rs/"

repository = "https://github.com/seppo0010/wikipedia-rs/"
keywords = ["wikipedia", "api"]

[features]
default = ["http-client"]
http-client = ["reqwest", "url"]

[dependencies]
serde_json = "1.0.138"
reqwest = { version = "0.12.2", optional = true, features = ["blocking"] }
url = { version = "2.5.4", optional = true }
thiserror = "2.0.11"
